--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mojaloop/interop-apis-bc-fspiop-api-svc",
-    "version": "0.6.5_t1",
+    "version": "0.6.5",
     "description": "Mojaloop vNext FSPIOP API Service",
     "license": "Apache-2.0",
     "homepage": "https://github.com/mojaloop/interop-apis-bc/tree/main/packages/fspiop-api-svc",
@@ -66,8 +66,8 @@
         "@mojaloop/security-bc-client-lib": "~0.5.12",
         "@mojaloop/security-bc-public-types-lib": "~0.5.6",
         "@mojaloop/transfers-bc-public-types-lib": "~0.5.3",
-        "@mojaloop/platform-shared-lib-observability-types-lib": "~0.5.5",
-        "@mojaloop/platform-shared-lib-observability-client-lib": "~0.5.7",
+        "@mojaloop/platform-shared-lib-observability-types-lib": "~0.5.6",
+        "@mojaloop/platform-shared-lib-observability-client-lib": "~0.5.8",
         "@opentelemetry/api": "~1.8.0",
         "ajv": "^8.12.0",
         "axios": "^1.4.0",
