fixed repeated config sets, changed back bc version to app version

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     },
     "workspaces": [
         "packages/fspiop-utils-lib",
+        "packages/fspiop-config-lib",
         "packages/fspiop-api-svc",
         "packages/fspiop-event-handler-svc",
         "packages/shared-mocks-lib",
