--- a/packages/fspiop-api-svc/package.json
+++ b/packages/fspiop-api-svc/package.json
@@ -43,6 +43,7 @@
         "dep:update": "ncu -e 2 -u"
     },
     "dependencies": {
+        "@mojaloop/interop-apis-bc-config-lib": "*",
         "@mojaloop/interop-apis-bc-fspiop-utils-lib": "*",
         "@fastify/cors": "^9.0.1",
         "@fastify/formbody": "^7.4.0",
