added quoting and transfers validations, updated payloads and opaque states according to new public messages

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "npm-check-updates": "^16.10.19",
         "nyc": "^15.1.0",
         "supertest": "^6.3.4",
-        "ts-jest": "^29.1.4",
+        "ts-jest": "^29.1.5",
         "tslib": "~2.6.3",
         "typescript": "^5.1.6"
     },
@@ -64,6 +64,7 @@
         "packages/fspiop-api-svc",
         "packages/fspiop-event-handler-svc",
         "packages/shared-mocks-lib",
+        "packages/client-lib",
         "packages/*"
     ],
     "dependencies": {
